Fixed wrapping issue on indicator.

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -20,7 +20,6 @@ body.dashboard {
     .right {
       display: inline-block;
       float: right;
-      width:124px;
 
       #indicator {
         float:left;
